logica completada, falta estilar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,15 +1,36 @@
 .navbar{
-    border: solid black;
     background-color: lightblue;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px;
 }
 
 .links{
     width: 400px;
     display: flex;
     justify-content: space-around;
-    border: solid blue;
-    background-color: lightcoral;
+    /* border: solid blue;
+    background-color: lightcoral; */
+    
+}
+
+.botones{
+    height: fit-content;
+    font-size: 20px;
+    background-color: lightgrey;
+    border: solid;
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+    
+}
+.botones:hover {
+    transform: scale(1.05);
+}
+
+.logo{
+    color: black;
+    text-decoration: none;
+    font-size: 40px;
 }
