--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -4,4 +4,24 @@
     border: solid 2px;
     border-radius: 5px;
     padding-left: 5px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.botones{
+    height: fit-content;
+    font-size: 15px;
+    background-color: lightgrey;
+    border: solid 1px;
+    text-decoration: none;
+    font-weight: 600;
+    color: black;
+    padding: 5px;
+    width: fit-content;
+    
+}
+.botones:hover {
+    transform: scale(1.05);
 }
