--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,22 +7,24 @@
 }
 
 .links{
-    width: 400px;
+    width: 700px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     /* border: solid blue;
     background-color: lightcoral; */
     
 }
 
 .botones{
-    height: fit-content;
-    font-size: 20px;
+    height: 50px;
+    font-size: 25px;
     background-color: lightgrey;
     border: solid;
     text-decoration: none;
     color: black;
     padding: 5px;
+    display: flex;
+    align-items: center;
     
 }
 .botones:hover {
@@ -30,7 +32,9 @@
 }
 
 .logo{
+    padding: 5px;
     color: black;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 50px;
+    border: solid;
 }
