--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,14 +4,13 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    border-bottom: solid 1px;
 }
 
 .links{
     width: 700px;
     display: flex;
     justify-content: space-between;
-    /* border: solid blue;
-    background-color: lightcoral; */
     
 }
 
@@ -19,7 +18,7 @@
     height: 50px;
     font-size: 25px;
     background-color: lightgrey;
-    border: solid;
+    border: solid 3px;
     text-decoration: none;
     color: black;
     padding: 5px;
@@ -31,10 +30,16 @@
     transform: scale(1.05);
 }
 
-.logo{
+.title{
     padding: 5px;
     color: black;
     text-decoration: none;
     font-size: 50px;
-    border: solid;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    border: solid 4px;
+
 }
